--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1Visualization>월별 꽃 판매현황(2020.08-2021.08)</h1Visualization>
-    <img src = "{{url_for('visualize')}}">
 
+    <img src = "/visualize", alt = "Image Placeholder">
+    <!--<img src = "{{url_for('visualize')}}"></src>-->
 </body>
 </html>
+
